# Office-installation-script

./: .gitignore  CMakeLists.txt  Configuration_O2019.xml  Configuration_O2021.xml  DarioInstallsOffice.cpp  How to compile.md  How to install  LICENCE  Master scripts and how to use them.md  Master scripts.md  README.md  app_icon.rc  build.bat  config.xml  mainwindow.cpp  mainwindow.h  resources.qrc  script from one installer
C++ GUI installers/: DarioInstaliraOffice.cpp  DarioInstallsOffice.cpp
Croatian configurations/: Configuration_O2019 Hrvatski.xml  Configuration_O2019_home_business_hrv.xml  Configuration_O2019_home_hrv.xml  Configuration_O2021_home_business_hrv.xml  Configuration_O2021_home_hrv.xml  Configuration_O2021_pro_plus_hrv.xml  Configuration_O2024 Hrvatski.xml  Configuration_O2024_home_business_hrv.xml  Configuration_O2024_home_hrv.xml  Configuration_O365 Hrvatski.xml  Configuration_O365_pro_plus_hrv.xml  Configuration_office2019.xml
Croatian configurations /: temp
English configurations/: Configuration_O2019 English.xml  Configuration_O2021 English.xml  Configuration_O2024 English.xml  Configuration_O365 English.xml
Raw Powershell scripts/: Office 2019 eng.ps1  Office 2021 eng.ps1  Office 2024 eng.ps1  Office 365 eng.ps1  Office.2019.eng.ps1  Office.2021.eng.ps1  Office.2024.eng.ps1  Office.365.eng.ps1  Office_2019_Hrvatski.ps1  Office_2019_hrv.ps1  Office_2021_Hrvatski.ps1  Office_2021_hrv.ps1  Office_2024_Hrvatski.ps1  Office_2024_hrv.ps1  Office_365_Hrvatski.ps1  Office_365_hrv.ps1  Readme.md
Raw Python scripts/: master script_EN.py
(+2 files in other folders)
